# studyrecord

./: README.md
Game101/: .gitignore  CMakeLists.txt  README.md
Game101/math/: CMakeLists.txt
Game101/math/include/: vector2.h  vector3.h  vector4.h
Game101/math/include/math/: color.h  math.h  matrix.h  quaternion.h  rotator.h  vector2.h  vector2d.h  vector3.h  vector3d.h  vector4.h  vector4d.h
Game101/math/src/: quaternion.cpp  vector2.cpp  vector2d.cpp  vector3.cpp  vector4.cpp
Game101/math/test/: CMakeLists.txt  main.cpp  opengl_main.cpp
Game101/render/: CMakeLists.txt
Game101/render/include/render/: app.h  shader.h
Game101/render/sharder/: shader.cpp
Game101/render/src/: app.cpp
Game101/render/test/: CMakeLists.txt  opengl_main.cpp
Game101/task/: CMakeLists.txt
Game101/task/include/task/: task_scheduler.h
GameWeb/Games101/: .gitignore  CMakeLists.txt  README.md
GameWeb/Games101/PA01/: CMakeLists.txt  main.cpp  pa01.h
GameWeb/Games101/PA02/: CMakeLists.txt  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Introduction to DirectX 11 3D Game Engine Programming/: .gitignore  CMakeLists.txt  README.md
Introduction to DirectX 11 3D Game Engine Programming/3rd/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/3rd/assimp/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/3rd/cmake/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/3rd/cmake/DirectX-Headers/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/3rd/cmake/FreeImage/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/3rd/cmake/ImGui/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/3rd/cmake/assimp/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/3rd/cmake/d3dcompiler/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/3rd/cmake/dxsdk/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/3rd/cmake/googletest/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/3rd/cmake/zlib/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/3rd/dxsdk/: dxsdk.7z
Introduction to DirectX 11 3D Game Engine Programming/3rd/imgui/imgui/: imgui_impl_win32.h
Introduction to DirectX 11 3D Game Engine Programming/Chapter4/: CMakeLists.txt  DX11_win_ini.cpp  DX11ini.cpp
Introduction to DirectX 11 3D Game Engine Programming/Chapter4/common/src/: D3D11RenderEngine.cpp  D3D11RenderMesh.cpp  D3D11Util.cpp  WinApp.cpp
Introduction to DirectX 11 3D Game Engine Programming/Chapter6/: CMakeLists.txt  main_draw.cpp
Introduction to DirectX 11 3D Game Engine Programming/Chapter6/HLSL/: Cube_PS.cso  Cube_VS.cso  Skull_VS.hlsl
Introduction to DirectX 11 3D Game Engine Programming/Chapter6/common/src/: Context.cpp  D3D11RenderEngine.cpp  D3D11RenderMesh.cpp  D3D11Util.cpp  WinApp.cpp
Introduction to DirectX 11 3D Game Engine Programming/Chapter7/: CMakeLists.txt  main_light.cpp
Introduction to DirectX 11 3D Game Engine Programming/Chapter7/HLSL/: Light.hlsli  Light_PS.hlsl  Light_VS.hlsl
Introduction to DirectX 11 3D Game Engine Programming/Chapter7/common/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/Chapter7/common/src/: Context.cpp  D3D11GraphicsBuffer.cpp  D3D11RenderEngine.cpp  D3D11RenderLayout.cpp  D3D11RenderMesh.cpp  D3D11Renderable.cpp  D3D11Util.cpp  Light.cpp  RenderLayout.cpp  RenderableHelper.cpp  SceneNode.cpp  WinApp.cpp
Introduction to DirectX 11 3D Game Engine Programming/Chapter7/core/src/: Context.cpp  D3D11RenderMesh.cpp  D3D11Renderable.cpp  Light.cpp  Mesh.cpp  (+6 more)
Introduction to DirectX 11 3D Game Engine Programming/Chapter8/: CMakeLists.txt  main_texture.cpp
Introduction to DirectX 11 3D Game Engine Programming/Chapter8/HLSL/: Basic.hlsli  Basic_2D_PS.hlsl  Basic_2D_VS.hlsl
Introduction to DirectX 11 3D Game Engine Programming/Chapter9/: CMakeLists.txt  main_blending.cpp  main_cube.cpp  main_firstcamera.cpp  main_geometry_shader.cpp  main_test.cpp  main_tree_billboard.cpp
Introduction to DirectX 11 3D Game Engine Programming/Chapter9/HLSL/: Basic.hlsli  Basic_2D_PS.hlsl  Basic_2D_VS.hlsl  Basic_3D_PS.hlsl  Cube.hlsl  LightHelp.hlsli
Introduction to DirectX 11 3D Game Engine Programming/Models/Chapter9/: Cube.xml  Lighting.fxml  Streamout.xml  Triangle.xml  box.json  box2D.xml  box3D.xml  water.xml
Introduction to DirectX 11 3D Game Engine Programming/cmake/: Compiler.cmake
Introduction to DirectX 11 3D Game Engine Programming/common/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/common/src/: D3D11RenderDevice.cpp  D3D11RenderEngine.cpp  D3D11RenderMesh.cpp  D3D11Util.cpp  Log.cpp  Timer.cpp  WinApp.cpp
Introduction to DirectX 11 3D Game Engine Programming/common/test/: CMakeLists.txt  test_common.cpp
Introduction to DirectX 11 3D Game Engine Programming/math/: CMakeLists.txt
Introduction to DirectX 11 3D Game Engine Programming/math/src/: math.cpp
Introduction to DirectX 11 3D Game Engine Programming/math/test/: test_math.cpp
Lab/: .gitignore  CMakeLists.txt  README.md
Lab/common/: CMakeLists.txt  string.h
Lab/net/: CMakeLists.txt
Lab/net/src/: socket.cc
Lab/task/: CMakeLists.txt
Lab/task/src/: processor.cc  task_scheduler.cc  task_scheduler.cpp
Lab/task/test/: CMakeLists.txt  main.cc  main.cpp
learnopengl/: .gitignore  CMakeLists.txt  README.md
learnopengl/game/: CMakeLists.txt
learnopengl/game/src/: EntityMngr.cpp
learnopengl/math/: CMakeLists.txt
learnopengl/math/src/: color.cpp  math.cpp  math_helper.h  matrix.cpp  quaternion.cpp  rotator.cpp  vector2d.cpp  vector3d.cpp  vector4d.cpp  vectorxd.cpp
learnopengl/math/test/: CMakeLists.txt  main.cpp
learnopengl/render/: CMakeLists.txt
learnopengl/render/shader/: fragment.glsl  vertex.glsl
learnopengl/render/src/: app.cpp  camera.cpp  index_buffer.cpp  renderer.cpp  shader.cpp  shader_object.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
learnopengl/render/test/: CMakeLists.txt  opengl_main.cpp
(+284 files in other folders)
