SET(IMGUI_PROJECT_DIR "${PROJECT_3RD_DIR}/ImGui")
SET(IMGUI_OUTPUT_DIR "${PROJECT_3RD_DIR}/lib/ImGui/${ZENGINE_PLATFORM_NAME}")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${IMGUI_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${IMGUI_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${IMGUI_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELWITHDEBINFO ${IMGUI_OUTPUT_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_MINSIZEREL ${IMGUI_OUTPUT_DIR})

UpdateExternalLib("ImGui", "https://github.com/ocornut/imgui.git" "5c1d2d1e4c562a2ed3efbc64476e703a655b45fd")

#add_subdirectory(${IMGUI_PROJECT_DIR} "${CMAKE_CURRENT_BINARY_DIR}/ImGui" EXCLUDE_FROM_ALL)